--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,44 @@
-version: '3.5'
+version: '3.6'
 services:
   frontend:
-    build:
-      dockerfile: ./frontend/Dockerfile
     container_name: frontend
-    tty: true
-
-  backend:
     build:
-      dockerfile: ./backend/Dockerfile
-    container_name: backend
+      dockerfile: ./docker/frontend/app/Dockerfile
+    ports:
+    - "8888:8888"
     tty: true
 
-  web:
-    container_name: webserver
-    image: nginx:1.23.3
-
-  db:
-    container_name: database
-    image: mysql:8.0.32
+  postgres:
+    container_name: db
+    image: postgres:12
+    restart: always
+    volumes:
+    - db_data:/var/lib/postgresql/data
     environment:
-      MYSQL_ROOT_PASSWORD: "admin"
-      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-      MYSQL_RANDOM_ROOT_PASSWORD: ""
-    # depends_on:
-    #   - backend
+      POSTGRES_PASSWORD: postgrespassword
+
+  graphql-engine:
+    container_name: hasura
+    image: hasura/graphql-engine:v2.19.0
+    ports:
+    - "8080:8080"
+    depends_on:
+    - "postgres"
+    restart: always
+    environment:
+      ## postgres database to store Hasura metadata
+      HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres:postgrespassword@postgres:5432/postgres
+      ## this env var can be used to add the above postgres database to Hasura as a data source. this can be removed/updated based on your needs
+      PG_DATABASE_URL: postgres://postgres:postgrespassword@postgres:5432/postgres
+      ## enable the console served by server
+      HASURA_GRAPHQL_ENABLE_CONSOLE: "true" # set to "false" to disable console
+      ## enable debugging mode. It is recommended to disable this in production
+      HASURA_GRAPHQL_DEV_MODE: "true"
+      HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
+      ## uncomment next line to run console offline (i.e load console assets from server instead of CDN)
+      # HASURA_GRAPHQL_CONSOLE_ASSETS_DIR: /srv/console-assets
+      ## uncomment next line to set an admin secret
+      # HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
+volumes:
+  db_data:
+
